Start replacing google ImmutableList with java List